--- a/SQL/09.Query.md
+++ b/SQL/09.Query.md
@@ -1,13 +1,13 @@
-### 🔸 QUERY
+### 🔶 QUERY
 
-#### 내포된 SQL문의 구분
+### 🔸 내포된 SQL문의 구분
 
 - SUB QUERY : where절이나 having 절에서 조건식에 사용되는 값을 제공하는 SQL문
 - Inline-View : From 절에서 가상의 테이블(가상의 테이블을 뷰 라고함)을 제공하는 SQL문
-- Scalar_SUB_QUERY : Select절에서 사용되는 서크붜리
+- Scalar_SUB_QUERY : Select절에서 사용되는 서브쿼리
 - Correlative Subquery (상호연관 서브쿼리) : 내포된 SQL문에서 메인쿼리의 컬럼을 참조하는 서브쿼리
 
-#### 🔹 SubQuery
+### 🔹 SubQuery
 
 - select 문 내부에 정의된 select 문을 서브쿼리라 한다
 - SubQuery는 where절의 조건식에서 사용되는 값을 제공한다
@@ -36,32 +36,15 @@
 
 <br>
 
-#### ▶ SubQuery의 종류
-
-- 단일행 서브쿼리
-- 다중행 서브쿼리
-- 다중열 서브쿼리
-
-
-- 단일행 서브쿼리
-    + 서브쿼리의 실행결과로 한 행만 반환된다.
-    + 단일행 비교 연산자
-        * =, >, >=, <, <=, <>
-- 다중행 서브쿼리
-    + 서브쿼리의 실행결과로 여러 행이 반환된다.
-    + 다중행 비교 연산자
-        * in, not in , any, all
-
-- 다중열 서브쿼리
-    + 두 개 이상의 컬럼값이 조회조건으로 반환되는 서브쿼리다.
-    + 다중열 서브쿼리 형식
-
   ```sql
     select column, column, ....
-    from table1 
-    where (column1, column2) in (select column1, column2 
-                                 from table2)
+        from table1
+    where (column1
+        , column2) in (select column1
+        , column2
+        from table2)
   ```
+
 - having절에서 서브쿼리 사용하기
     + group by 절을 사용해서 그룹화하고 그룹함수를 실행한 결과를 필터링하는 having 절에도 서브쿼리를 사용할 수 있다.
 
@@ -142,3 +125,220 @@ where TO_CHAR(HIRE_DATE, 'YYYY') IN (select TO_CHAR(HIRE_DATE, 'YYYY')
                                      where DEPARTMENT_ID = 60);
 
 ```
+
+----------------
+
+#### ▶ SubQuery의 종류
+
+- 단일행 서브쿼리
+- 다중행 서브쿼리
+- 다중열 서브쿼리
+
+
+- 단일행 서브쿼리
+    + 서브쿼리의 실행결과로 한 행만 반환된다. (1행 1열 데이터 반환)
+    + 단일행 비교 연산자
+        * =, >, >=, <, <=, !=
+- 다중행 서브쿼리
+    + 서브쿼리의 실행결과로 여러 행이 반환된다. (N행 1열 데이터 반환)
+    + 다중행 비교 연산자
+        * IN , NOT IN
+        * > any, > all , >= any , >= all
+        * > any, > all , >= any , >= all
+
+
+- 다중열 서브쿼리
+    + 두 개 이상의 컬럼값이 조회조건으로 반환되는 서브쿼리다.
+    + 다중열 서브쿼리 형식
+        + IN , NOT IN
+
+------
+
+🔹 단일행 서브쿼리
+
+❓ 101번 사원 에게 보고 받는 상사와 같은 상사에게 보고하는 직원의 아이디 , 이름 조회
+
+```sql
+select EMPLOYEE_ID, FIRST_NAME
+from EMPLOYEES
+where MANAGER_ID = (select MANAGER_ID
+                    from EMPLOYEES
+                    where EMPLOYEE_ID = 101)
+```
+
+❓ 101번 보다 급여를 많이받는 직원의 아이디 , 이름 , 급여 , 조회하기
+
+```sql
+--1. 101번에 대해 조회
+select EMPLOYEE_ID, FIRST_NAME, SALARY
+from EMPLOYEES
+where EMPLOYEE_ID = 101;
+-- Neena , 17000
+
+select EMPLOYEE_ID, FIRST_NAME, SALARY
+from EMPLOYEES
+where SALARY > (select SALARY
+                from EMPLOYEES
+                where EMPLOYEE_ID = 101);
+```
+
+----
+
+🔹다중행 서브쿼리
+
+❓ 'Steven'과 같은 해에 입사한 직원의 아이디, 이름 , 입사일 조회하기
+
+```sql
+-- 1. Steven 입사날짜 확인하기
+select *
+from EMPLOYEES
+where FIRST_NAME = 'Steven';
+
+-- 128,Steven,2008-03-08
+-- 100,Steven,2003-06-17
+-- Steven이 2명이 조회되서 단일행 서브쿼리쓸수가 없음
+
+-- 단일 행 하위 질의에 2개 이상의 행이 리턴되었습니다.
+select EMPLOYEE_ID, FIRST_NAME, HIRE_DATE
+from EMPLOYEES
+where TO_CHAR(HIRE_DATE, 'YYYY') IN (select TO_CHAR(HIRE_DATE, 'YYYY')
+                                     from EMPLOYEES
+                                     where FIRST_NAME = 'Steven');
+```
+
+❓ 60번 부서에 소속된 직원들의 급여보다 , 급여를 많이 받는 직원의 아이디 , 이름 , 급여
+
+```sql
+
+-- 1. 60번 부서에 소속된 직원들 급여 조회 
+select EMPLOYEE_ID, FIRST_NAME, SALARY
+from EMPLOYEES
+where DEPARTMENT_ID = 60;
+
+-- 1번답
+select EMPLOYEE_ID, FIRST_NAME, SALARY
+from EMPLOYEES
+where SALARY > all (select SALARY
+                    from EMPLOYEES
+                    where DEPARTMENT_ID = 60)
+order by SALARY;
+
+-- 2번답
+select EMPLOYEE_ID, FIRST_NAME, SALARY
+from EMPLOYEES
+where SALARY > (select max(SALARY)
+                from EMPLOYEES
+                where DEPARTMENT_ID = 60)
+order by SALARY;
+
+```
+
+---------------
+
+🔹 다중열 서브쿼리 - 컬럼이 여러개
+
+❓ 각 부서별 최저 급여를 받는 직원의 아이디 , 이름 급여 조회하기
+
+```sql
+
+-- 1. 부서별 최저급여 찾기
+select DEPARTMENT_ID, min(SALARY)
+from EMPLOYEES
+where DEPARTMENT_ID is not null
+group by DEPARTMENT_ID
+order by DEPARTMENT_ID;
+
+
+select EMPLOYEE_ID, FIRST_NAME, SALARY
+from EMPLOYEES
+where (DEPARTMENT_ID, SALARY) IN (select DEPARTMENT_ID, min(SALARY)
+                                  from EMPLOYEES
+                                  where DEPARTMENT_ID is not null
+                                  group by DEPARTMENT_ID)
+order by DEPARTMENT_ID;
+
+```
+
+---------------------
+
+### 🔹 상호연관 서브쿼리
+
+- 서브쿼리에서 메인쿼리의 '컬럼' 을 참조하면 상호연관 서브쿼리가 된다
+
+```sql
+select outer.column, outer.column
+from Table outer
+where outer.column 연산자 (select inner.column
+    from Table inner
+    where inner.column = outer.column);
+```
+
+▶ 일반 서브쿼리와 상호연관 서브쿼리의 다른점
+
+- 서브쿼리는 메인쿼리보다 먼저 실행된다
+- 서브쿼리는 딱 한번만 실행된다
+
+상호연관 서브쿼리는 메인쿼리문에서 처리되는 각 행에 대해 한번씩 실행
+
+
+-------
+
+❓ 직원들 중에서 자신이 소속된 부서의 평균 급여보다 많이 받는 사원
+
+```sql
+-- 1. 부서 평균 급여
+select DEPARTMENT_ID, trunc(avg(SALARY))
+from EMPLOYEES
+where DEPARTMENT_ID is not null
+group by DEPARTMENT_ID
+order by DEPARTMENT_ID;
+
+
+select x.EMPLOYEE_ID, x.FIRST_NAME, x.DEPARTMENT_ID, trunc(x.SALARY)
+from EMPLOYEES x
+where x.salary > (select avg(y.SALARY)
+                  from EMPLOYEES y
+                  where y.department_id = x.DEPARTMENT_ID);
+
+
+```
+
+❓ 부서아이디 , 부서이름 , 해당 부서에 소속된 직원수 조회하기
+
+```sql
+select *
+from DEPARTMENTS;
+
+select d.DEPARTMENT_ID,
+       d.DEPARTMENT_NAME,
+       (select count(*)
+        from EMPLOYEES e
+        where e.DEPARTMENT_ID = d.DEPARTMENT_ID) as count
+from DEPARTMENTS d;
+
+/*
+    10  ,   Administration ,    1 // select count(*) from emp y where y.dept_id = 10
+    
+    20  ,   Marketing  ,    2   // select count(*) from emp y where y.dept_id = 20
+    
+    30  ,   Purchasing ,   6    // select count(*) from emp y where y.dept_id = 30
+*/
+```
+
+❓ 직원아이디, 직원이름 , 상사의 아이디, 상사의 이름 조회
+
+```sql
+select EMPLOYEE_ID, FIRST_NAME, MANAGER_ID
+from EMPLOYEES;
+
+select e.EMPLOYEE_ID                           직원아이디,
+       e.FIRST_NAME                            직원이름,
+       e.MANAGER_ID                            상사의아이디,
+       (select m.FIRST_NAME
+        from EMPLOYEES m
+        where m.EMPLOYEE_ID = e.MANAGER_ID) as 상사의이름
+from EMPLOYEES e;
+
+```
+   
+
