Rename : CRUD -> DML 이름변경 / + DDL_CREATE,TRUNCATE 추가

--- a/SQL/02.DML.md
+++ b/SQL/02.DML.md
@@ -1,49 +1,8 @@
-### 테이블 생성하기
+### 🔶 DML
 
-    CREATE TABLE 테이블명 (
-            컬럼명 데이터타입 제약조건,
-            컬럼명 데이터타입 ,
-            컬럼명 데이터타입(사이즈),
-            컬럼명 데이터타입 DEFAULT 기본값
-                    )   
-
-<br>
-
-        CREATE TABLE
-            테이블을 생성시키는 SQL 명령어
-        BOOK_NO ,BOOK_TITLE ,BOOK_WRITER,BOOK_PRICE      
-        BOOK_STOCK , BOOK_REG_DATE
-            새로 생성한 테이블릐 컬럼이름
-        NUMBER
-            해당컬럼의 데이터 타입을 숫자형으로 지정
-        VARCHAR2
-            해당컬럼의 데이터 타입을 가변길이문자형으로 지정
-        DATE    
-            해당컬럼의 데이터타입을 날짜형으로 지정
-        PRIMARY KEY
-            해당 컬럼을 테이블에서 행의 식별하기 위한 값을 가지는 기본키 컬럼으로 지정
-            해당컬럼은 NULL을 허용하지 않으며 , 값은 테이블 전체에서 고유하다
-        NOT NULL
-            해당 컬럼은 NULL인 상태를 가질수 없다
-        DEFAULT 10
-            새로운 행을 추가할 때 해당 컬럼에 값을 지정하지 않으면 10이 기본값으로 저장
-        DEFAULT SYSDATE
-            새로운 행을 추가할 때 해당 컬럼에 값을 지정하지 않으면 시스템의 현재 날짜가 저장    
-
-<Br>
-
-#### 실제예시
-
-    CREATE TABLE SAMPLE_BOOKS (
-    BOOK_NO         NUMBER(6) PRIMARY KEY,
-    BOOK_TITLE      VARCHAR(255) NOT NULL,
-    BOOK_WRITER     VARCHAR(255),
-    BOOK_PRICE       NUMBER(7,0) NOT NULL,
-    BOOK_STOCK      NUMBER(3,0)DEFAULT 10,
-    BOOK_REG_DATE   DATE        DEFAULT SYSDATE
-         );
-
-----
+- 데이터 조작어다.
+- 데이터의 추가, 조회, 변경, 삭제 명령어다.
+- insert , select , update , delete
 
 ### 테이블에 신규 행 추가하기
 
@@ -168,3 +127,54 @@ where 조건식
 - 도서 테이블의 모든 데이터 전달하기
 
         TRUNCATE TABLE SAMPLE_BOOKS;
+
+-----------
+
+### DDL - 테이블 생성 Create
+
+### 테이블 생성하기
+
+    CREATE TABLE 테이블명 (
+            컬럼명 데이터타입 제약조건,
+            컬럼명 데이터타입 ,
+            컬럼명 데이터타입(사이즈),
+            컬럼명 데이터타입 DEFAULT 기본값
+                    )   
+
+<br>
+
+        CREATE TABLE
+            테이블을 생성시키는 SQL 명령어
+        BOOK_NO ,BOOK_TITLE ,BOOK_WRITER,BOOK_PRICE      
+        BOOK_STOCK , BOOK_REG_DATE
+            새로 생성한 테이블릐 컬럼이름
+        NUMBER
+            해당컬럼의 데이터 타입을 숫자형으로 지정
+        VARCHAR2
+            해당컬럼의 데이터 타입을 가변길이문자형으로 지정
+        DATE    
+            해당컬럼의 데이터타입을 날짜형으로 지정
+        PRIMARY KEY
+            해당 컬럼을 테이블에서 행의 식별하기 위한 값을 가지는 기본키 컬럼으로 지정
+            해당컬럼은 NULL을 허용하지 않으며 , 값은 테이블 전체에서 고유하다
+        NOT NULL
+            해당 컬럼은 NULL인 상태를 가질수 없다
+        DEFAULT 10
+            새로운 행을 추가할 때 해당 컬럼에 값을 지정하지 않으면 10이 기본값으로 저장
+        DEFAULT SYSDATE
+            새로운 행을 추가할 때 해당 컬럼에 값을 지정하지 않으면 시스템의 현재 날짜가 저장    
+
+<Br>
+
+#### 실제예시
+
+    CREATE TABLE SAMPLE_BOOKS (
+    BOOK_NO         NUMBER(6) PRIMARY KEY,
+    BOOK_TITLE      VARCHAR(255) NOT NULL,
+    BOOK_WRITER     VARCHAR(255),
+    BOOK_PRICE       NUMBER(7,0) NOT NULL,
+    BOOK_STOCK      NUMBER(3,0)DEFAULT 10,
+    BOOK_REG_DATE   DATE        DEFAULT SYSDATE
+         );
+
+----
