--- a/SQL/11.무결성제약조건.md
+++ b/SQL/11.무결성제약조건.md
@@ -49,6 +49,28 @@
 ```
 
 ```sql
+  create TABLE User
+  (
+      User_No       NUMBER(8) CONSTRAINT No PRIMARY KEY,
+      User_Id       VARCHAR(255)
+          CONSTRAINT Id UNIQUE,
+      User_Password VARCHAR(255)
+          CONSTRAINT Pw UNIQUE,
+      User_Name     VARCHAR(255)
+          CONSTRAINT Name UNIQUE,
+      User_Email    VARCHAR(255)
+  )
+
+-- CONSTRAINT 를 사용한다면 나중에  ' CONSTRAINT 설정한별칭  '으로 제약조건을 변경 , 삭제할수 있다
+
+-- CONSTRAINT 사용해서 UNIQUE 제약조건 삭제
+ALTER TABLE USER
+DROP
+CONSTRAINT Name;
+
+```
+
+```sql
 create TABLE 수강신청현황
 (
     신청번호 NUMBER(8),
@@ -155,3 +177,82 @@ CREATE TABLE USER
 )
 
 ```
+
+----
+
+### 🔶 CONSTRAINT
+
+```sql
+  create TABLE User
+  (
+      User_No       NUMBER(8) CONSTRAINT No PRIMARY KEY,
+      User_Id       VARCHAR(255)
+          CONSTRAINT Id UNIQUE,
+      User_Password VARCHAR(255)
+          CONSTRAINT Pw UNIQUE,
+      User_Name     VARCHAR(255)
+          CONSTRAINT Name UNIQUE,
+      User_Email    VARCHAR(255)
+  )
+```
+
+<br>
+
+- CONSTRAINT 를 사용한다면 나중에  ' CONSTRAINT 설정한별칭  '으로 제약조건을 변경 , 삭제할수 있다
+- 그러나 만약 제약 조건에 이름을 명시하지 않았다면 데이터베이스 시스템이 자동으로 생성한 이름을 사용해야 한다
+- 이 경우에는 해당 이름을 알아야만 제약 조건을 ALTER 문을 통해 변경하거나 삭제할 수 있다
+- 자동 생성된 제약 조건 이름을 알기 위해서는 데이터베이스의 시스템 뷰나 메타데이터를 쿼리하여 해당 정보를 확인할 수 있다
+
+-------------
+
+### 📌 제약조건 사용해서 테이블 만들기
+
+```sql
+CREATE TABLE SAMPL_CUSTOMERS
+(
+    NO          NUMBER(10),
+    ID          VARCHAR2(255) CONSTRAINT custmerId_NN NOT NULL,
+    NAME        VARCHAR2(255) CONSTRAINT cusomterNm_NN NOT NULL,
+    PASSWORD    VARCHAR2(255) CONSTRAINT cusomterPw_NN NOT NULL,
+    EMAIL       VARCHAR2(255),
+    TEL         VARCHAR2(255) CONSTRAINT customer_Tel_NN NOT NULL,
+    GENDER      CHAR(1),
+    POSTAL_CODE VARCHAR2(20),
+    ADDRESS1    VARCHAR2(255),
+    ADDRESS2    VARCHAR2(255),
+    DELETED     CHAR(1) DEFAULT 'N',
+    REG_DATE    DATE    DEFAULT SYSDATE,
+    UPD_DATE    DATE    DEFAULT SYSDATE,
+
+    CONSTRAINT customer_No_Pk PRIMARY KEY (NO),
+    CONSTRAINT customer_Id_Pk UNIQUE (ID),
+    CONSTRAINT customer_Gender CHECK ( USER_GENDER IN ('F', 'M') ),
+    CONSTRAINT customer_Email_UK UNIQUE (EMAIL),
+    CONSTRAINT customer_DELETED_CK CHECK ( DELETED IN ('Y', 'N') )
+)
+```
+
+📌 DELETED 컬럼 굳이 필요해 ?
+
+예를들어
+
+- Customer 테이블의 Customer_No 컬럼
+- Order 테이블의 Customer_No 컬럼
+
+Order 테이블 Customer_No 가 Customer 테이블의 Customer_No 를 참조 하고 있다 <br>
+그렇다면 Order 테이블 Customer_No는 FK 로 설정되어있다
+
+이 상황시 발생할수 있는 경우가 2가지가 있다.
+
+1.ON DELETE CASCADE
+
+- 테이블에서 행 하나 삭제시 해당 고객이 주문한 모든 주문행도 삭제가 된다
+- 판매량 조사 같이 주문량이 필요한 경우 문제가됨
+
+
+2. ON DELETE RESTRICT
+
+- 테이블에서 행 하나 삭제시 해당 고객이 주문한 행이 있다면 삭제가 되지 않는다
+- 고객이 회원탈퇴 시 'N' 값이 아닌 'Y' 값을 주어서 회원 탈퇴 표시를 따로 해야한다.
+
+https://gi-dor.tistory.com/188 
