Feat : 제약조건 NOT NULL , UNIQUE , PK , FK , CHECK

--- a/SQL/11.무결성제약조건.md
+++ b/SQL/11.무결성제약조건.md
@@ -234,10 +234,10 @@ CREATE TABLE SAMPL_CUSTOMERS
 
 📌 DELETED 컬럼 굳이 필요해 ?
 
-예를들어
-
 - Customer 테이블의 Customer_No 컬럼
 - Order 테이블의 Customer_No 컬럼
+
+<img src= https://github.com/eungsu/documents/assets/86302876/09abf44d-f1c3-48f5-bbbf-596cbcddbef1 height="350" width= "700" />
 
 Order 테이블 Customer_No 가 Customer 테이블의 Customer_No 를 참조 하고 있다 <br>
 그렇다면 Order 테이블 Customer_No는 FK 로 설정되어있다
