Feat : 제약조건 NOT NULL , UNIQUE , PK , FK , CHECK

--- a/SQL/11.무결성제약조건.md
+++ b/SQL/11.무결성제약조건.md
@@ -208,7 +208,7 @@ CREATE TABLE USER
 ### 📌 제약조건 사용해서 테이블 만들기
 
 ```sql
-CREATE TABLE SAMPL_CUSTOMERS
+CREATE TABLE SAMPLE_CUSTOMERS
 (
     NO          NUMBER(10),
     ID          VARCHAR2(255) CONSTRAINT custmerId_NN NOT NULL,
@@ -226,10 +226,23 @@ CREATE TABLE SAMPL_CUSTOMERS
 
     CONSTRAINT customer_No_Pk PRIMARY KEY (NO),
     CONSTRAINT customer_Id_Pk UNIQUE (ID),
-    CONSTRAINT customer_Gender CHECK ( USER_GENDER IN ('F', 'M') ),
+    CONSTRAINT customer_Gender CHECK ( GENDER IN ('F', 'M') ),
     CONSTRAINT customer_Email_UK UNIQUE (EMAIL),
     CONSTRAINT customer_DELETED_CK CHECK ( DELETED IN ('Y', 'N') )
-)
+);
+
+CREATE SEQUENCE CUSTOMERS_SEQ
+    START WITH 1000
+    NOCACHE;
+
+INSERT INTO SAMPLE_CUSTOMERS
+    (NO, ID, NAME, PASSWORD, TEL, GENDER, EMAIL)
+VALUES (CUSTOMERS_SEQ.nextval, 'Han', '한산', 'password123!', '010-1234-7895', 'M', 'hansan987@gmail.com');
+
+
+
+
+
 ```
 
 📌 DELETED 컬럼 굳이 필요해 ?
