--- a/SQL/11.무결성제약조건.md
+++ b/SQL/11.무결성제약조건.md
@@ -29,8 +29,8 @@
 
 2️⃣ UNIQUE 제약조건
 
-- 컬럼단위 혹은 1개 이상의 컬럼을 합쳐서 제약조건을 지정할수 있따
-- 해당 컬럼은 테이블 전체게 대해서 고유한 값을 가져야한다
+- 컬럼단위 혹은 1개 이상의 컬럼을 합쳐서 제약조건을 지정할수 있다
+- 해당 컬럼은 테이블 전체에 대해서 고유한 값을 가져야한다
 - NOT NULL 제약 조건이 지정되지 않았다면 NULL 값을 가지는 것은 상관없다
 - 입력폼에서 중복검사를 하는 항목은 UNIQUE 제약조건이 적용된 항목이다
 
@@ -88,7 +88,7 @@ create TABLE 수강신청현황
 
 - 컬럼단위 혹은 1개 이상의 컬럼을 합쳐서 제약조건을 지정할 수 있다.
 - 테이블당 하나만 지정할 수 있다
-- PRIMARY KEY 제약조건이 적용된 컬럼은 NULL 값을 허용하지 않으면 , 고유한 값을 가져야한다
+- PRIMARY KEY 제약조건이 적용된 컬럼은 NULL 값을 허용하지 않으며 , 고유한 값을 가져야한다
 - 테이블에서 행을 대표하는 컬럼에 적용하는 제약조건이다
 - PRIMATY KEY 제약조건이 적용된 컬럼의 값은 시퀀스에서 획득한 일련번호를 사용하는것이 보통이다
 
@@ -239,8 +239,14 @@ INSERT INTO SAMPLE_CUSTOMERS
     (NO, ID, NAME, PASSWORD, TEL, GENDER, EMAIL)
 VALUES (CUSTOMERS_SEQ.nextval, 'Han', '한산', 'password123!', '010-1234-7895', 'M', 'hansan987@gmail.com');
 
+-- 삭제
+drop table SAMPLE_BOOKS;
+drop table SAMPLE_CUSTOMERS;
+drop table SAMPLE_PRODUCTS;
 
-
+-- 시퀀스 삭제
+drop sequence BOOKS_SEQ;
+drop sequence CUSTOMERS_SEQ
 
 
 ```
@@ -257,7 +263,7 @@ Order 테이블 Customer_No 가 Customer 테이블의 Customer_No 를 참조 하
 
 이 상황시 발생할수 있는 경우가 2가지가 있다.
 
-1.ON DELETE CASCADE
+1. ON DELETE CASCADE
 
 - 테이블에서 행 하나 삭제시 해당 고객이 주문한 모든 주문행도 삭제가 된다
 - 판매량 조사 같이 주문량이 필요한 경우 문제가됨
