--- a/SQL/11.무결성제약조건.md
+++ b/SQL/11.무결성제약조건.md
@@ -268,6 +268,9 @@ Order 테이블 Customer_No 가 Customer 테이블의 Customer_No 를 참조 하
 - 테이블에서 행 하나 삭제시 해당 고객이 주문한 모든 주문행도 삭제가 된다
 - 판매량 조사 같이 주문량이 필요한 경우 문제가됨
 
+```sql
+DROP TABLE DEPTS CASCADE CONSTRAINTS; -- 제약조건 무시하고 삭제가능
+```
 
 2. ON DELETE RESTRICT
 
