Feat : DDL -  CREATE, ALTER, DROP, TRUNCATE

--- a/SQL/10.DDL.md
+++ b/SQL/10.DDL.md
@@ -3,6 +3,28 @@
 - 데이터베이스에서 객체생성 ,변경 , 삭제에 사용되는 명령어
 - CREATE, ALTER, DROP, TRUNCATE
 
+🔹 주요 데이터 베이스 객체
+
+- 테이블
+
+  데이터의 기본 저장단위, 행과 열로 구성되어 있다.<br><br>
+
+- 뷰
+
+  하나 이상의 테이블을 사용해서 만든 가상의 테이블<br><br>
+
+- 시퀀스
+
+  일련번호 생성기<br><br>
+
+- 인덱스
+
+  검색성능을 향상시키기 위해 데이터에 대한 색인을 가지고 있다. <br><br>
+
+- 동의어
+
+  객체에 대한 다른 이름을 제공한다. <br>
+
 🔹 시퀀스 Sequence
 
 - 일련번호를 제공하는 오라클 객체
