--- a/SQL/14. 분석함수_집합연산.md
+++ b/SQL/14. 분석함수_집합연산.md
@@ -14,14 +14,14 @@ select ROWNUM,
        컬럼명,
        컬럼명...
            from(select 컬럼명 , 컬럼명, 컬럼명 from 테이블명
-       [WHERE] 조건식
-       ORDER BY 컬럼명) WHEN ROWNUM < N;
+                 [WHERE] 조건식
+                ORDER BY 컬럼명) WHEN ROWNUM < N;
 
 -- ROWNUM 은 OracleSQL 에서 제공해주는 가상 컬럼
 -- ROWNUM은 SELECT 절에서 사용할 경우 , 추출하는 데이터에 1부터 시작하는 순번을 부여하는 용도
 --          WHERE 절에서 사용할 경우 추찰하는 데이터 중 일부만 가져오는 용도로 활용 할 수 있다.
--- ROWNUM은 순번을 1부터 부여하는 가상컬럼이기 때문에 ROWNUM의 시작을 1이 아닌값 부터 추찰하려 할 경우 데이터 조회가 안된다
--- ORDER BY 절로 데이터를 을 맻개의 데티어만 추츨해야하는 경우 , 
+-- ROWNUM은 순번을 1부터 부여하는 가상컬럼이기 때문에 ROWNUM의 시작을 1이 아닌값 부터 추출하려 할 경우 데이터 조회가 안된다
+-- ORDER BY 절로 데이터를 몇개의 데이터만 추츨해야하는 경우 , 
 -- ORDER BY절을 먼저 처리하도록 , 뷰를 만들고  그 뷰를 감싸는 바깥쪽 SQL 에서 ROWNUM 처리를 하자
 
 
