--- a/Web/01. HTML.md
+++ b/Web/01. HTML.md
@@ -20,7 +20,43 @@
 
 ------------------------
 
-#### 🔹
+#### 🔹 링크 태그 및 표기법
+
+A 태그
+
+- a 태그는 hyperlink를 정의하는 태그
+- hyper 는 텍스트가 다중으로 연결되어있는 상태를 의미한다.
+- hyperlink는 텍스트에서 연결된 다른 텍스트로 건너뛰어 읽어 올수 있는 기능
+
+📌 주요속성
+
+href - 이동하고자 하는 파일의 경로를 지정하는 속성이다
+
+                <a href = "http://www.naver.com"> 네이버 </a>
+                <a href = "01.html">첫번째 파일</a> 
+
+target - 링크를 클릭 시 윈도우를 어떻게 오픈할지 지정한다
+
+          <a href = "" target = "_self"> 링크1 </a>   
+                                  현재 윈도우에서 오픈한다 , 기본값
+          <a href = "" target = "_blank"> 링크2 </a>
+                                  새로운 윈도우나 탭에서 오픈한다.
+
+📌 절대경로 (nav bar에 주로 사용)
+
+                현재 작업 디렉토리와 관계없이 특정파일의 절대적인 위치를 지정
+                <a href = "http://www.naver.com"> 네이버 </a>
+                <a href="/login.html">
+                <a href="/order/list.html">
+                <a href="/product/list.html">
+
+📌 상대경로
+
+                현재 작업 디렉토리 기준으로 특정 파일의 상대적인 위치를 지정
+                <a href="home.html" targer="_blank"> 홈화면</a>
+                <a href="../index.html">시작페이지</a>
+                <a href="../user/loginform.html">로그인폼</a>
+                <a href="../product/list.html"> 상품목록 </a>
 
 ----------------
 
@@ -98,4 +134,83 @@
     아래첨자 , 위첨자 텍스트로 지정
 
 <img src = https://github.com/gi-dor/HTA/assets/86302876/267d358c-4b77-4c46-8846-180a5606c399 width = "700" height = "500" />
+
+-----------------------------------
+
+
+<br>
+
+#### 🔹 목록 태그
+
+📌 <ul> 태그는 <li> , <ol> 태그에 종속되어있다
+
+#### 1️⃣ 순서 없는 목록  Unordered List
+
+사용 예시 ) 메뉴 , 내비게이션의 링크 목록
+
+              <ul> 태그 사용
+              <li> 태그 를 이용해 아이템을 목록화 한다 (List item)
+
+```html
+ <h2>순서 없는 목록</h2>
+<h3>상품 카테고리</h3>
+<ul>
+    <li>TV</li>
+    <li>COMPUTER</li>
+    <li>KEY_BOARD</li>
+    <li>PAD</li>
+    <li>TABLET</li>
+</ul>
+
+<br>
+
+<h3> 즐겨 찾기 목록</h3>
+<ul>
+    <li><a href="youtube.com">YOUTUBE</a></li>
+    <li><a href=""></a>Instagram</li>
+    <li><a href="www.naver.com">NAVER</a></li>
+    <li><a href="playNC.com">NC</a></li>
+    <li><a href="kakaogames.com">KakaoGame</a></li>
+</ul>
+```
+
+#### 2️⃣ 순서 있는 목록  Ordered List
+
+사용 예시 ) 순위 , 랭킹 , 레시피 목록 정의할 때 사용
+
+                <ol> 태그 사용
+                <li> 태그 를 이용해 아이템을 목록화 한다 (List item)
+
+```html
+<h2>순서 있는 목록</h2>
+<h3> 베스트 셀러 </h3>
+<ol>
+    <li>자바의 신</li>
+    <li>자바의 정석</li>
+    <li>이것이 자바다</li>
+    <li>Do it Java</li>
+</ol>
+```
+
+#### 3️⃣ 정의 목록        Description List
+
+사용 예시 ) 영화정보 책정보 등을 정의할 때 사용
+
+                <dl> 태그 사용       
+                <dt> 태그와 <dd> 태그를 이용해 항목과 데이터를 정의한다
+
+```html
+<h2>정의 목록</h2>
+<h3> 도서 정보</h3>
+<dl>
+    <dt>제목</dt>
+    <dd> 연금술사</dd>
+    <dt>저자</dt>
+    <dd> 파울로 코엘료</dd>
+    <dt>출판사</dt>
+    <dd>Munhak Tongne</dd>
+    <dt>가격</dt>
+    <dd>19000</dd>
+</dl>
+```
 
