--- a/Web/01. HTML.md
+++ b/Web/01. HTML.md
@@ -142,7 +142,7 @@ target - 링크를 클릭 시 윈도우를 어떻게 오픈할지 지정한다
 
 #### 🔹 목록 태그
 
-📌 <ul> 태그는 <li> , <ol> 태그에 종속되어있다
+📌 ul 태그는 li , ol 태그에 종속 되어있다
 
 #### 1️⃣ 순서 없는 목록  Unordered List
 
