--- a/Web/HTML/01. HTML.md
+++ b/Web/HTML/01. HTML.md
@@ -13,7 +13,7 @@
 
 #### 🔹 HyperText Markup Language - HTML
 
-- 웹 용문서 작성시 사용하는 언어
+- 웹 문서 작성시 사용하는 언어
 - HyperText : 문서의 링크를 클릭하면 연결된 문서로 즉시 이동할 수 있는 기능
 - Markup : 문서에서 어느 부분이 제목인지, 본문인지, 링크인지, 그림인지 등을 표시할 때 마크업(태그)을 사용한다.
 - 마크업(태그)을 사용해서 작성된 문서이며, 링크를 클릭하면 연결된 다른 문서로 즉시 이동할 수 있는 문서를 작성할 때 사용되는 언어
@@ -137,80 +137,4 @@ target - 링크를 클릭 시 윈도우를 어떻게 오픈할지 지정한다
 
 -----------------------------------
 
-
-<br>
-
-#### 🔹 목록 태그
-
-📌 ul 태그는 li , ol 태그에 종속 되어있다
-
-#### 1️⃣ 순서 없는 목록  Unordered List
-
-사용 예시 ) 메뉴 , 내비게이션의 링크 목록
-
-              <ul> 태그 사용
-              <li> 태그 를 이용해 아이템을 목록화 한다 (List item)
-
-```html
- <h2>순서 없는 목록</h2>
-<h3>상품 카테고리</h3>
-<ul>
-    <li>TV</li>
-    <li>COMPUTER</li>
-    <li>KEY_BOARD</li>
-    <li>PAD</li>
-    <li>TABLET</li>
-</ul>
-
-<br>
-
-<h3> 즐겨 찾기 목록</h3>
-<ul>
-    <li><a href="youtube.com">YOUTUBE</a></li>
-    <li><a href=""></a>Instagram</li>
-    <li><a href="www.naver.com">NAVER</a></li>
-    <li><a href="playNC.com">NC</a></li>
-    <li><a href="kakaogames.com">KakaoGame</a></li>
-</ul>
-```
-
-#### 2️⃣ 순서 있는 목록  Ordered List
-
-사용 예시 ) 순위 , 랭킹 , 레시피 목록 정의할 때 사용
-
-                <ol> 태그 사용
-                <li> 태그 를 이용해 아이템을 목록화 한다 (List item)
-
-```html
-<h2>순서 있는 목록</h2>
-<h3> 베스트 셀러 </h3>
-<ol>
-    <li>자바의 신</li>
-    <li>자바의 정석</li>
-    <li>이것이 자바다</li>
-    <li>Do it Java</li>
-</ol>
-```
-
-#### 3️⃣ 정의 목록        Description List
-
-사용 예시 ) 영화정보 책정보 등을 정의할 때 사용
-
-                <dl> 태그 사용       
-                <dt> 태그와 <dd> 태그를 이용해 항목과 데이터를 정의한다
-
-```html
-<h2>정의 목록</h2>
-<h3> 도서 정보</h3>
-<dl>
-    <dt>제목</dt>
-    <dd> 연금술사</dd>
-    <dt>저자</dt>
-    <dd> 파울로 코엘료</dd>
-    <dt>출판사</dt>
-    <dd>Munhak Tongne</dd>
-    <dt>가격</dt>
-    <dd>19000</dd>
-</dl>
-```
 
