Rename :  오타 수정 ROW_NUMBER()

--- a/SQL/14. 분석함수_집합연산.md
+++ b/SQL/14. 분석함수_집합연산.md
@@ -127,11 +127,11 @@ WHERE DEPARTMENT_ID = 80;
 
 #### 🔹 DENSE_RANK 함수
 
-- 중복된 데이터행에 상관없이 순차적으로 순위를 반환한다
+- 중복된 데이터 행에 상관없이 순차적으로 순위를 반환한다
 
 <br>
 
-❓ 80번 부소에 소속된 직원들을 급여를 기준으로 랭킹을 부여해서 조회하기
+❓ 80번 부서에 소속된 직원들을 급여 기준으로 랭킹을 부여해서 조회하기
 
 ```sql
 select FIRST_NAME,
