--- a/Login_Register/파일첨부.md
+++ b/Login_Register/파일첨부.md
@@ -52,3 +52,24 @@
     + IOUtils , FileCopyUtils 등을 이용해 업로드된 첨부파일을 저장시킨다.
 
 #### 🔹 파일 다운로드
+
+#### 다운로드 처리
+
+1. 응답 메세지에 다운로드되는 파일에 대한 정보를 설정한다
+    + 응답으로 내려보낼 첨부파일을 표현하는 File 객체 생성 ```File file = new File(directory,filename);```
+    + 응답컨텐츠 타입 설정하기 ```response.setContentType("application/octet-stream");```
+    + 응답컨텐츠 길이 설정하기 ```response.setContentLengthLong(file.length());```
+    + 응답 메세지의 바디부에 포함된 정보가 첨부파일이고 , 첨부파일의 이름을 설정하기
+        - 파일명은 utf-8 방식으로 인코딩(변환) 한다
+        - ```String encodedFilename = UrlEncoder.encode(fliename,"UTF-8");```
+        - ```Content-Disposition``` 응답헤더는 응답메세지의 바디부에 오는 컨텐츠의 특성을 알려준다
+        - ```attachment;``` 는 브라우저에서 응답으로 받은 파일을 저장하게한다
+        - ```filename=xxx``` 는 다운로드되는 파일의 이름을 웹브라우저에게 알려준다
+        - ```response.setHeader("Content-Disposition","attachment; filename=" + endedFilename);```
+          <br><br>
+    + 파일 다운로드하기
+        - 서버에 저장된 파일을 (다운로드 할 파일) 읽어오는 읽기전용 스트림 생성 ```InputStream in = new FileInputStrea(file);```
+        - 웹 브라우저로 파일데이터를 출력시키는 쓰기전용 스트림을 응답객체에서 획득한다 ```OutputStream out = response.getOutputStream(); ```
+
+2. 다운로드 할 파일정보를 조회할 수 있는 기본키 값을 요청 파라미터로 전달하기
+    + 다운로드할 파일명을 요청 파라미터로 전달하지 않는다
