Feat :  이벤트 - keyboard , mouse ,form

--- a/JavaScript/02. 이벤트.md
+++ b/JavaScript/02. 이벤트.md
@@ -37,3 +37,75 @@
     + 이벤트 발생을 감지하고 , 이벤트에 응답해서 실행되기 위해 정의된 코드블럭
 
 <img src="https://github.com/gi-dor/HTA/assets/86302876/6892cb14-1d52-447f-8d5c-bc91dfdbeeb3"/>
+
+### 이벤트의 종류 🎉
+
+#### Mouse Event 🖱
+
+- click 마우스 버튼을 클릭했을 때
+- dbclick 마우스 버튼을 더블 클릭했을 때
+- mousedown 마우스 버튼을 누르고 있을 때
+- mouseup 누르고 있던 마우스 버튼을 뗄 때
+- mousemove 마우스를 움직일 때
+- mouseenter 마우스를 요소 안으로 움직일 때
+- mouseleave 마우스를 요소 밖으로 움직일 때
+- mouseover 마우스를 요소 위로 움직일 때
+- mouseout 마우스를 요소 밖으로 움직일 때
+
+#### KeyBoard Event ⌨
+
+- keydown 키보드의 키를 누르고 있을 때
+- keyup 누르고 있던 키보드의 키를 뗼 때
+- keypress 키를 누르고 뗐을 때
+
+#### Form Event
+
+- submit 폼 입력값이 제출될 때
+- change 폼 입력값의 상태가 변경되었을 때 ( select , checkbox , radio의 상태가 변경되었을 때 )
+- input 입력필드 , textarea 의 값이 변경되었을 때
+- focus 요소가 포커스를 획득했을 때
+- blur 요소가 포커스를 잃었을 때
+
+#### form 태그 안에 button은 모두 제출 시킨다 ( = submit)
+
+```html
+
+<form method="post" action="login.jsp">
+    아이디
+    <input type="text" name="id">
+    비밀번호
+    <input type="password" name="pwd">
+    <input type="submit" value="로그인">
+</form>
+```
+
+```html
+
+<form method="post" action="login.jsp">
+    아이디
+    <input type="text" name="id">
+    <button type="button">중복체크</button>   <!--입력값을 제출하지 않기위해 type = button-->
+    비밀번호
+    <input type="password" name="pwd">
+    <button type="submit" value="로그인">
+</form>
+```
+
+```html
+
+<form method="post" action="login.jsp">
+    아이디
+    <input type="text" name="id">
+    비밀번호
+    <input type="password" name="pwd">
+    <button>로그인</button>
+</form>
+```
+
+#### UI Event
+
+- load 웹 페이지의 로드가 완료되었을 때
+- error 자바스크립트 실행중 오류가 발생하였으나 요청한 자원이 존재하지 않을 때
+- resize 브라우저 창의 크기를 조절했을 때
+- scroll 사용자가 페이지를 위아래로 스크롤했을 때
+- select 사용자가 웹페이지의 텍스트를 선택했을 때
