--- a/JavaScript/05. Ajax.md
+++ b/JavaScript/05. Ajax.md
@@ -61,6 +61,9 @@ element.onclick = function () {
 
 3. 객체의 addEventListener() 메서드를 사용해 이벤트 핸들러 등록
 
++ addEventListener()는 document의 특정요소(Id,class,tag 등등..)
++ event ( click하면 함수를 실행하라, 마우스를 올리면 함수를 실행하라 등등.. )를 등록할 때 사용한다
+
 ```js
 <button id="btn">버튼</button>
 
@@ -76,6 +79,8 @@ element.addEventListener("click", function () {
 
 
 ```
+
+<br><br>
 
 ``` html
 <!DOCTYPE html>
