Feat : DOM 주요객체 , Element 객체

--- a/JavaScript/03. DOM.md
+++ b/JavaScript/03. DOM.md
@@ -1,12 +1,10 @@
-## 💎DOM (Document Object Model)
+### 💎DOM (Document Object Model)
 
-### 문서 객체 모델
-
-### HTML , XML들의 문서를 액세스 하는 표준을 정의
-
-- DOM은 w3c 에서 HTML , XML 문설를 다루는 표준 (인터페이스)을 정의한 것
-- DOM 에 정의된 표준에 대한 구현은 브라우저 제조사 , 프로그래밍 언어 개발사 , 라이브러리 개발자가 담당
-- 브라우저 종류나 프로그래밍 언어의 상관없이 동일한 API 로 구현되어 있다
+- 문서 객체 모델
+- HTML , XML들의 문서를 액세스 하는 표준을 정의하고 있다
+    + DOM은 [w3c](https://www.w3schools.com/js/js_htmldom.asp) 에서 HTML , XML 문서를 다루는 표준 (인터페이스)을 정의한 것
+    + DOM 에 정의된 표준에 대한 구현은 브라우저 제조사 , 프로그래밍 언어 개발사 , 라이브러리 개발자가 담당
+    + 브라우저 종류나 프로그래밍 언어의 상관없이 동일한 API 로 구현되어 있다
 
 ### DOM 특징
 
@@ -17,11 +15,11 @@
 
 ### DOM 주요객체
 
-Document - 웹브라우저 HTML 문서를 로딩 했을 때 , Documnet 객체가 된다
-Element - HTMl 의 태그를 표현하하는 객체다 , Documentr 객체에는 현재 로딩된 HTML문서 모든 태그에 대한 Eleme
-Attr - HTML 태그의 속성을 표현하는 객체
-HTMLCollection - Element 객체를 여러개 포함할 수있는 배열 유사객체
-Event - 사용자가 웹 페이지와 상호 작용 할때 마다 엘리먼트에서 발생되는 객체
+- Document - 웹브라우저 HTML 문서를 로딩 했을 때 , Document 객체가 된다
+- Element - HTML 의 태그를 표현하하는 객체다 , Document 객체에는 현재 로딩된 HTML문서 모든 태그에 대한 Eleme
+- Attr - HTML 태그의 속성을 표현하는 객체
+- HTMLCollection - Element 객체를 여러개 포함할 수있는 배열 유사객체
+- Event - 사용자가 웹 페이지와 상호 작용 할때 마다 엘리먼트에서 발생되는 객체
 
 ### 브라우저 내장객체 ( Brower Object Model , BOM)
 
