Feat : JavaScript 객체생성 - 리터럴 K:V , 생성자함수

--- a/JavaScript/04. 자바스크립트 객체생성.md
+++ b/JavaScript/04. 자바스크립트 객체생성.md
@@ -2,9 +2,13 @@
 
 #### 1️⃣ 객체 리터럴을 이용해서 객체 생성하기
 
+- 중괄호 { } 를 이용한다
+- 또한 객체 내부에 속성과 해당 값들을 나열해 객체를 생성한다
+- 중괄호 내에서 속성 - 값 쌍을 나열해 객체를 정의
+
 ```js
 let obj1 = {
-    name = "홍길동",
+    name: "홍길동",
     kor: 100,
     eng: 100,
     math: 100,
@@ -19,7 +23,7 @@ let obj1 = {
 
 ```js
 let obj2 = {
-    name = "김유신",
+    name: "김유신",
     kor: 80,
     eng: 80,
     math: 70,
@@ -55,7 +59,7 @@ function Student(name, kor, eng, math) {
 // 객체 생성하고 생성자 함수로 초기화하기
 let obj1 = new Student("홍길동", 100, 100, 70);
 let obj2 = new Student("김유신", 80, 80, 60);
-let obj3 = Student("강감찬", 100, 100, 100);
+let obj3 = new Student("강감찬", 100, 100, 100);
 ```
 
 ````js
@@ -76,7 +80,7 @@ let p1 = new Person("나타", "nata@gmail.com", "010-0000-1111");
 4. Person(name , email ,tel) 함수의 수행문이 실행된다
 
     + ```this.name = name;``` 빈객체에 name 프로퍼티 추가 , email 프로퍼티에 email로 전달받은 "나타" 대입된다
-    + ```this.email = email;``` 객체에 email 프로퍼티 추가 , email 프로퍼티에 email로 전달받은 "nata@gmail,.com" 대입된다
+    + ```this.email = email;``` 빈객체에 email 프로퍼티 추가 , email 프로퍼티에 email로 전달받은 "nata@gmail,.com" 대입된다
     + ```this.tel = tel;``` 객체에 tel 프로퍼티 추가 , tel 프로퍼티에 tel 로 전달받은 "010-0000-1111" 대입된다
 5. 수행문의 실행이 완료가 되면 this로 전달받았던 객체를 반환한다.
     + this로 전달받은 객체 ```name -> 나타 , email -> "nata@gmail.com" , tel -> "010-0000-1111" ```
