--- a/JavaScript/05. Ajax.md
+++ b/JavaScript/05. Ajax.md
@@ -2,13 +2,12 @@
 
 - 자바스크립트와 XML 을 사용해서 서버와의 비동기 데이터 통신
     + 비동기 통신 ?
-    + ```
-      웹 페이지(브라우저) 에서 서버와 데이터를 주고 받을 때 페이지를 새로 고침 하지 않고 데이터를 교환 하는 방식
-      보통 일반적인 동기적 통신은 요청을 보내면 서버에서 응답이 올 때까지 기다려야 한다 그동안에는 화면이 멈추고 다른 작업이 수행 불가능하다
-      비동기적 통신을 사용하면 요청을 보낸 후에도 화면이 멈추지 않고 계속해서 다른 작업을 수행할 수 있다
-      ```
-- XMLHttpRequest 객체를 활용해서 서버와 데이터 통신을 한다
-- 자바 스크립트로 서버와 데이터 통신이 가능해졌다
+        - 웹 페이지(브라우저) 에서 서버와 데이터를 주고 받을 때 페이지를 새로 고침 하지 않고 데이터를 교환 하는 방식
+        - 보통 일반적인 동기적 통신은 요청을 보내면 서버에서 응답이 올 때까지 기다려야 한다 그동안에는 화면이 멈추고 다른 작업이 수행 불가능하다
+        - 비동기적 통신을 사용하면 요청을 보낸 후에도 화면이 멈추지 않고 계속해서 다른 작업을 수행할 수 있다
+
+- ```XMLHttpRequest``` 객체를 활용해서 서버와 데이터 통신을 한다
+- 자바 스크립트로 서버와 데이터 통신이 가능
 - 페이지의 리로딩없이 화면을 일부분 갱신하는게 가능해짐
 
 #### 사용 하는 이유
@@ -27,58 +26,10 @@
 #### API <br>
 
 - ```onreadystatechange```    ⬅ 이벤트
-- XMLHRequest의 readyStatie 상태가 변경될 때마다 실행될 콜백함수
+- ```XMLHttpRequest```의 ```readyState``` 상태가 변경될 때마다 실행될 콜백함수
 
 <Br>
 
-### 🔹 이벤트 핸들러 등록
-
-1. 인라인 이벤트 핸들러 등록
-
-```js
-  <button onclick="handler()">버튼</button>
-
-function handler() {
-    수행문;
-}
-```
-
-2. 엘리먼트 객체의 이벤트 프로퍼티에 이벤트 핸들러 등록
-
-```js
-<button id="btn">버튼</button>
-
-// 1. 엘리먼트를 조회한다
-let element = document.getElementById("btn");
-
-// 2. 엘리먼트의 onclick 프로퍼티에 이벤트 핸들러를 등록한다
-element.onclick = function () {
-    수행문;
-}
-
-// 해당 엘리먼트에서 click 이벤트가 발생하면 onclick 프로퍼티에 등록한 함수를 실행한다 
-```
-
-3. 객체의 addEventListener() 메서드를 사용해 이벤트 핸들러 등록
-
-+ addEventListener()는 document의 특정요소(Id,class,tag 등등..)
-+ event ( click하면 함수를 실행하라, 마우스를 올리면 함수를 실행하라 등등.. )를 등록할 때 사용한다
-
-```js
-<button id="btn">버튼</button>
-
-// 1. 엘리먼트를 조회한다
-let element = document.getElementById("btn");
-
-// 2. 엘리먼트의 addEventListener() 메서드를 이용해 이벤트 핸들러 등록
-element.addEventListener("click", function () {
-    수행문;
-})
-
-// 해당 엘리먼트에서 click 이벤트가 발생하면 onclick 프로퍼티에 등록한 함수를 실행한다 
-
-
-```
 
 <br><br>
 
@@ -228,3 +179,54 @@ xhr.send();
     + JSON은 XML과 비교해 더 쉽고 데이터를 저장하고 교환하기 위해 설계된 텍스트 기반의 데이터 교환 표준이다
     + JSON은 자바스크립트를 기반으로 설계되었으며 XML의 대안으로서 고안되었다
     + JSON은 XML과 비교해서 경량의 데이터 교환 표준이다
+
+---
+
+### 🔹 이벤트 핸들러 등록
+
+1. 인라인 이벤트 핸들러 등록
+
+```js
+<button onclick="handler()">버튼</button>
+
+function handler() {
+    수행문;
+}
+```
+
+2. 엘리먼트 객체의 이벤트 프로퍼티에 이벤트 핸들러 등록
+
+```js
+<button id="btn">버튼</button>
+
+// 1. 엘리먼트를 조회한다
+let element = document.getElementById("btn");
+
+// 2. 엘리먼트의 onclick 프로퍼티에 이벤트 핸들러를 등록한다
+element.onclick = function () {
+    수행문;
+}
+
+// 해당 엘리먼트에서 click 이벤트가 발생하면 onclick 프로퍼티에 등록한 함수를 실행한다 
+```
+
+3. 객체의 addEventListener() 메서드를 사용해 이벤트 핸들러 등록
+
++ addEventListener()는 document의 특정요소(Id,class,tag 등등..)
++ event ( click하면 함수를 실행하라, 마우스를 올리면 함수를 실행하라 등등.. )를 등록할 때 사용한다
+
+```js
+<button id="btn">버튼</button>
+
+// 1. 엘리먼트를 조회한다
+let element = document.getElementById("btn");
+
+// 2. 엘리먼트의 addEventListener() 메서드를 이용해 이벤트 핸들러 등록
+element.addEventListener("click", function () {
+    수행문;
+})
+
+// 해당 엘리먼트에서 click 이벤트가 발생하면 onclick 프로퍼티에 등록한 함수를 실행한다 
+
+
+```
