Rename : 오타 수정 페이지

--- a/Login_Register/검색기능.md
+++ b/Login_Register/검색기능.md
@@ -45,7 +45,7 @@ function goPage(page) {
 내비 바에서 메뉴 링크 클릭시
 요청 URL : ```comm/board/list.jsp```
 
-페이비번호 클릭시
+페이지번호 클릭시
 요청 URL : ```comm/board.list.jsp?page=3&opt=&keyword=```
 
 검색버튼을 클락헀을 때
